<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/register_Button"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/action_register"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/email_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_editText"
        app:layout_constraintTop_toBottomOf="@+id/email_editText" />

    <EditText
        android:id="@+id/lastName_editText"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/firstName_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/firstName_editText"
        app:layout_constraintTop_toTopOf="@+id/firstName_editText"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/firstName_editText"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="212dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName_editText"
        android:autofillHints="" />

    <TextView
        android:id="@+id/back_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:text="@string/back"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="79dp" />
</androidx.constraintlayout.widget.ConstraintLayout>