<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".AddProduceActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add_produce_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/numProduce_Spinner"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/rounded_spinner"
        android:dropDownWidth="wrap_content"
        android:entries="@array/num_list"
        android:minWidth="100dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/produceName_autoCompleteTextView"
        app:layout_constraintTop_toBottomOf="@+id/produceName_autoCompleteTextView" />

    <Spinner
        android:id="@+id/produceUnit_Spinner"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_spinner"
        android:entries="@array/unit_list"
        android:minWidth="100dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/numProduce_Spinner"
        app:layout_constraintEnd_toEndOf="@+id/produceName_autoCompleteTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/numProduce_Spinner"
        app:layout_constraintTop_toTopOf="@+id/numProduce_Spinner" />

    <Button
        android:id="@+id/addProduce_button"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/add_produce"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/produceName_autoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/produce_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/viewGroceryList_Button"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:text="@string/view_groceries"
        app:layout_constraintStart_toStartOf="@+id/addProduce_button"
        app:layout_constraintTop_toBottomOf="@+id/addProduce_button" />

    <Button
        android:id="@+id/back_Button"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="@+id/viewGroceryList_Button"
        app:layout_constraintEnd_toEndOf="@+id/addProduce_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/viewGroceryList_Button"
        app:layout_constraintTop_toTopOf="@+id/viewGroceryList_Button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/num_produce"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/numProduce_Spinner"
        app:layout_constraintStart_toStartOf="@+id/numProduce_Spinner"
        app:layout_constraintTop_toBottomOf="@+id/numProduce_Spinner" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/produceUnit_Spinner"
        app:layout_constraintStart_toStartOf="@+id/produceUnit_Spinner"
        app:layout_constraintTop_toBottomOf="@+id/produceUnit_Spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>